# orange

./: .gitignore  README  configure.ac
data/: Makefile.am  gafrc  template.sch
src/: .gitignore  AboutDialog.vala  AboutDialog.xml.in  AddSimulation.vala  AddSimulationDialog.vala  AddSimulationDialog.xml  ArchiveSchematics.vala  ArchiveSchematicsDialog.vala  ArchiveSchematicsDialog.xml  BackannotateRefdes.vala  BackannotateRefdesDialog.vala  BackannotateRefdesDialog.xml  Batch.vala  BatchController.vala  DeleteBatch.vala  Design.vala  DesignAddExistingBatch.vala  DesignAddNewBatch.vala  DialogFactory.vala  DocumentError.vala  EditBatch.vala  EditExportPdfBatch.vala  EditPdfOptionsBatch.vala  EditPdfOptionsDialog.vala  EditPdfOptionsDialog.xml  ExportBOMBatch.vala  ExportBOMDialog.vala  ExportBOMDialog.xml  ExportNetlistBatch.vala  ExportNetlistDialog.vala  ExportNetlistDialog.xml  ExportPdfOptions.vala  ExportPrintBatch.vala  MainWindow.vala  MainWindow.xml  Makefile.am  NewDesignDialog.vala  NewDesignDialog.xml  NewProjectDialog.vala  NewProjectDialog.xml  (+25 more)
